<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="coffeeapp_text">CoffeeApp</string>
    <string name="username_text">Username</string>
    <string name="buttonlogin_text">Log In</string>
    <string name="password_text">Password</string>
    <string name="textview_noaccount">I don\'t have an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_button">Next</string>
    <string name="finish_button">Finish</string>
    <string name="contact">Contact</string>

    <string-array name="firstChoice_options">
        <item>Coffee</item>
        <item>Tea</item>
        <item>Machiato</item>
        <item>Ristretto</item>
        <item>Lungo</item>
        <item>Espresso</item>
    </string-array>

    <string-array name="secondChoice_options">
        <item>Ensaimada</item>
        <item>Donut</item>
        <item>Cupkake</item>
    </string-array>

    <string-array name="thirdChoice_options">
        <item>Baguette</item>
        <item>Big baguette</item>
        <item>Small baguette</item>
    </string-array>

</resources>