<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lovely"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/TextViewCoffeeApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffeeapp_text"
            android:textColor="@color/lovelyDark"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <EditText
            android:id="@+id/EditTextUserName"
            android:layout_width="265dp"
            android:layout_height="80dp"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="20px"
            android:ems="10"
            android:hint="@string/username_text"
            android:inputType="textPersonName"
            android:textColor="@color/lovelyDark"
            android:textColorHighlight="@color/lovelyDark"
            android:textColorHint="@color/lovelyDark"
            android:textColorLink="@color/lovelyDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewCoffeeApp"
            app:layout_constraintVertical_bias="0.073" />

        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="265dp"
            android:layout_height="80dp"
            android:drawableLeft="@drawable/ic_baseline_security_24"
            android:drawablePadding="20px"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:textColor="@color/lovelyDark"
            android:textColorHighlight="@color/lovelyDark"
            android:textColorHint="@color/lovelyDark"
            android:textColorLink="@color/lovelyDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextUserName"
            app:layout_constraintVertical_bias="0.173" />

        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="211dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/lovelyDark"
            android:text="@string/buttonlogin_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextPassword"
            app:layout_constraintVertical_bias="0.269" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_noaccount"
            android:textColor="@color/lovelyDark"
            android:textColorHighlight="@color/lovelyDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ButtonLogin"
            app:layout_constraintVertical_bias="0.28" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>